# Financial-Transactions-Fraud-Detection

./: .env.example  .gitignore  NOTE.md  README.md  docker-compose.yml  pyproject.toml
eda/: charts.ipynb  charts_vi.ipynb  overview.ipynb  overview.md
src/config/: db_config.py  dir_config.py  logs_config.py
src/db/: db_manager.py  init_db.py
src/db/sql_queries/: schema.sql
src/etl/: cleaner.py  collect.py  pipeline.py
src/utils/: file_helpers.py  hardware.py
