[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.10",
    "dotenv>=0.9.9",
    "fastapp>=0.1.7",
    "google>=3.0.0",
    "imblearn>=0.0",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "kagglehub>=1.0.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.29",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.48.0",
    "xgboost>=3.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
